# openDAMP

./: README.md  adCompanies_scrapper.rb  awazzaCleanMerge.rb  beaconDetector.rb  beaconDetectorTHREADS.csv  beaconDetectorThreads.rb  columnsFormat.rb  config  convert.rb  core.rb  csync_detector.rb  database.rb  define.rb  entities.rb  exportDBTable.rb  filters.rb  install  keywordsLists.rb  looper.rb  mergeFeats.rb  ops.rb  parser.rb  plot.gn  plot1.gn  plot2.gn  plot3.gn  plotter.rb  results.rb  stacked_area.gn  trace.rb  user.rb  utilities.rb
plotScripts/: plotBars.gn  plotCDF.gn  plotLinesPoints.gn  plotStacked_area.gn  plotZoomed.gn  stacked_histogram.gn
resources/: adCompanies.csv  cleartxtPrices_privatics  companies.db  disconnect.json  disconnect_merged.json  easylist.txt  easylist_adblock.txt  easyprivacy.txt  ghostery-bugs.json  ghostery-lsos.json
