set terminal postscript enhanced eps  defaultplex \
   leveldefault  blacktext \
   dashed dashlength 2.0 linewidth 3.0 butt \
   palfuncparam 2000,0.003 \
   "Helvetica" 24 

set grid y lt 0 lw 1 lc rgb "#B8B8B8"
set ylabel "CDF"
set xlabel xTitle
set style data lines
set style line 1 lt 1  lw 2.5 lc rgb '#0060ad'
set style line 2 lt 1  lw 2.5 lc rgb 'red'

#set log y
#set format y "10^{%L}"

if (x>0){
	set key right bottom; 
	if (t1 eq 'rest'){
			st1=2; 
			st2=1;
	}else{
			st1=1; 
			st2=2; 
	plot '.temp2.data' u 2:1 title t1 ls st2, \
		'.temp.data' u 2:1 title t2 ls st1;
	}
}else{
	set nokey; \
	plot '.temp.data' u 2:1 lt 1 lc rgb '#0060ad' lw 2.5
}
