set terminal postscript enhanced eps  defaultplex \
   leveldefault  blacktext \
   dashed dashlength 2.0 linewidth 3.0 butt \
   palfuncparam 2000,0.003 \
   "Helvetica" 18


set auto x
set ylabel "Number of reqs"
set xlabel xTitle
set grid y lt 0 lw 1 lc rgb "#B8B8B8"
set grid x lt 0 lw 1 lc rgb "#B8B8B8"
set log y
set format y "10^{%L}"
set nokey
set style line 1 lc rgb '#0060ad' lt 1 lw 2 pt 7 pi -1 ps 1.2
set xtic rotate by -50 scale 0

if(histo>0){
	set boxwidth 0.5
	set style fill solid
	N = system("awk 'NR==1{print NF}' .temp.data")
	plot for [i=1:N] ".temp.data" u 1:xtic(2) w boxes
}else{
	set style data linespoints
	set pointintervalbox 2
	N = system("awk 'NR==1{print NF}' .temp.data")
	plot for [i=1:N] ".temp.data" u 1:xtic(2) with linespoints ls 1
}



