set auto x
set ylabel "Percentage of reqs"
set xlabel xTitle
set grid y lt 0 lw 1 lc rgb "#B8B8B8"
set grid x lt 0 lw 1 lc rgb "#B8B8B8"
#set log y
set format y "%g %%"
set nokey
set style line 1 lc rgb '#0060ad' lt 1 lw 1 pt 7 pi -1 ps 1


if(y>0){set terminal postscript enhanced eps  defaultplex \
   leveldefault  blacktext \
   dashed dashlength 2.0 linewidth 3.0 butt \
   palfuncparam 2000,0.003 \
   "Helvetica" 24
	set xtic rotate by -45 scale 0
	unset xlabel

	set boxwidth 0.5
	set style fill solid
	N = system("awk 'NR==1{print NF}' .temp.data")
	plot for [i=1:N] ".temp.data" u 1:xtic(2) w boxes
}else{
	set terminal postscript enhanced eps  defaultplex \
   leveldefault  blacktext \
   dashed dashlength 2.0 linewidth 3.0 butt \
   palfuncparam 2000,0.003 \
   "Helvetica" 13
	set xtic rotate by -90 scale 0

set multiplot

	set style data linespoints
	set pointintervalbox 2
	N = system("awk 'NR==1{print NF}' .temp.data")
	plot for [i=1:N] ".temp.data" u 1:xtic(2) with linespoints ls 1

set size 0.6,0.6
set origin 0.2,0.35
set xrange [0:20]
set yrange [0:20]
set xlabel ""
set ylabel ""
unset arrow
set grid
	plot for [i=1:N] ".temp.data" u 1:xtic(2) with linespoints ls 1
unset multiplot
}



