set terminal png size 480,400 enhanced truecolor font 'Verdana,9'
set output "trafficBytes.png"
set ylabel "Percentage of Traffic"
set xlabel "Bytes"
set yrange [0:100]
set pointsize 0.8
set format y "%g %%"
set border 11
set xtics out
set tics front
set key below
plot ".temp.data" using 1:(($2+$3)+$4+$5+$6+$7+$8) title column(2) with filledcurves x1, \
  "" using 1:($4+$5+$6+$7+$8) title column(4) with filledcurves x1, \
  "" using 1:($5+$6+$7+$8) title column(5) with filledcurves x1, \
  "" using 1:($6+$7+$8) title column(6) with filledcurves x1, \
	"" using 1:($7+$8) title column(7) with filledcurves x1, \
	"" using 1:($8) title column(8) with filledcurves x1;
