set terminal postscript enhanced eps  defaultplex \
   leveldefault  blacktext \
   palfuncparam 2000,0.003 \
   "Helvetica" 24 
set output "trafficBytes.eps"
set ylabel "Percentage of Traffic"
set xlabel "KBytes"

set yrange [0:*]
set ytics 0,10,100
set pointsize 0.8
set format y "%g %%"
set log x
set xrange [10:100000]
set border 11
set xtics (10,100,1000,10000,100000)
set format x "10^{%L}"
set tics front
set key below
#plot ".temp.data" using 1:(($2+$3)+$4+$5+$6+$7+$8) title column(2) with filledcurves x1 lc rgb 'red', \
#  "" using 1:($4+$5+$6+$7+$8) title column(4) with filledcurves x1 lc rgb 'blue', \
#  "" using 1:($5+$6+$7+$8) title column(5) with filledcurves x1 lc rgb 'green', \
#  "" using 1:($6+$7+$8) title column(6) with filledcurves x1 lc rgb '#555555', \
#	"" using 1:($7+$8) title column(7) with filledcurves x1 lc rgb 'brown', \
#	"" using 1:($8) title column(8) with filledcurves x1 ;

plot ".temp.data" using 1:($2+$3+$4+$5+$6) title column(2) with filledcurves x1 lc rgb 'red', \
  "" using 1:($3+$4+$5+$6) title column(3) with filledcurves x1 lc rgb 'blue', \
  "" using 1:($4+$5+$6) title column(4) with filledcurves x1 lc rgb 'green', \
  "" using 1:($5+$6) title column(5) with filledcurves x1 lc rgb 'brown', \
	"" using 1:($6) title column(6) with filledcurves x1 lc rgb '#555555';
