set terminal postscript enhanced eps  defaultplex \
   leveldefault  blacktext \
   dashed dashlength 2.0 linewidth 3.0 butt \
   palfuncparam 2000,0.003 \
   "Helvetica" 22

set nokey
set xtic rotate by -70 scale 0
set format y "%g %%"
set auto x
set xlabel xTitle
set ylabel yTitle
set multiplot
set style line 1 lc rgb '#0060ad' lt 1 lw 1 pt 7 pi -1 ps 1
set style data linespoints
set pointintervalbox 2
N = system(sprintf("awk 'NR==1{print NF}' %s", fromFile))
plot for [i=1:N] fromFile u 1:xtic(2) with linespoints ls 1
unset grid

set grid y lt 0 lw 1 lc rgb "#B8B8B8"
set grid x lt 0 lw 1 lc rgb "#B8B8B8"
set xtic rotate by -55 font "Helvetica, 20" 
set size 0.6,0.6
set origin 0.35,0.38
set xrange [0:15]
set xlabel ""
set ylabel ""
unset arrow
plot for [i=1:N] fromFile u 1:xtic(2) with linespoints ls 1
unset multiplot
